// protoc --go_out=../cache --go_opt=paths=source_relative --go-grpc_out=../cache --go-grpc_opt=paths=source_relative cache.proto
syntax="proto3";
import "google/protobuf/empty.proto";

package cache;
option go_package="../cache";

message StoreRequest {
    string key=1;
    string value=2;
}

message StoreResponse{
    string status=1;
}

message GetRequest{
    string key=1;
}

message GetResponse{
    string key=1;
    string value=2;
}
message ListResonse{
    repeated GetResponse list=1;
}
service Cache{
    rpc Store(StoreRequest) returns(StoreResponse) {}
    rpc Get(GetRequest) returns(GetResponse){}
    rpc StoreStream(stream StoreRequest) returns(stream StoreResponse) {}
    rpc List(google.protobuf.Empty) returns(ListResonse){}
}